[package]
name = "ygg"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
tokio = { version = "1.46", features = ["full"] }
url = "2.2"
toml = "0.8"
atty = "0.2"
thiserror = "1.0"
