[package]
name = "ygg"
version = "0.1.3"
edition = "2021"
rust-version = "1.70"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
tokio = { version = "1.46", features = ["full"] }
url = "2.5"
toml = "0.9"
thiserror = "2.0"
indicatif = "0.17"
